log
Thu May  5 11:13:12 HSP 2022: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
9c36184
Thu May  5 11:15:51 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
011ff7e
Thu May  5 11:19:01 HSP 2022: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
5ff3c1f
Thu May  5 11:20:01 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3e9b821
Thu May  5 11:24:11 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:25: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
     return pq->heapArray[0];
            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fdaba1d
Thu May  5 11:24:38 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f85a5d3
Thu May  5 11:25:14 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
840df2d
Thu May  5 11:26:58 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
800d2e6
Thu May  5 11:27:48 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
0d54b9e
Thu May  5 12:08:53 HSP 2022: 
 heap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
4f61298
Thu May  5 18:52:40 HSP 2022: 
 heap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  7|1
total_score: 45/70
82d127e
Thu May  5 18:53:52 HSP 2022: 
 heap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  7|1
total_score: 50/70
a2ace9e
Fri May  6 11:10:37 HSP 2022: 
 heap.c | 23 ++++++++++++++++-------
 1 file changed, 16 insertions(+), 7 deletions(-)
 tests:  7|1
total_score: 45/70
349fdfa
Fri May  6 11:15:05 HSP 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
6d22e99
Fri May  6 11:16:13 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
757ab8a
Fri May  6 11:16:50 HSP 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
74951aa
Fri May  6 11:19:45 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
5f032a4
Fri May  6 11:22:06 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
202f3dc
Fri May  6 11:24:57 HSP 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 55/70
e596edd
Fri May  6 11:25:47 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6b41386
Fri May  6 11:29:09 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
1be9993
Fri May  6 11:30:07 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
06ff575
Fri May  6 11:56:55 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
ca52019
Fri May  6 11:57:31 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
a0248ae
Fri May  6 16:04:22 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
335be85
Fri May  6 16:04:48 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6114e2f
Fri May  6 17:04:03 HSP 2022: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
23e7e3f
Fri May  6 17:04:22 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
68104f7
Fri May  6 17:04:54 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
6e1b42c
Fri May  6 17:05:11 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
8ec7b29
Fri May  6 17:05:32 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
762a875
Fri May  6 17:05:47 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
5dd1fba
Fri May  6 17:06:20 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
0b2c281
Fri May  6 17:14:47 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:89:33: error: format '%i' expects argument of type 'int', but argument 3 has type 'void *' [-Werror=format=]
       printf("size = %i, top = %i\n", pq->size, pq->heapArray[0].data );
                                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f24a107
Fri May  6 17:15:07 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:89:33: error: format '%i' expects argument of type 'int', but argument 3 has type 'void *' [-Werror=format=]
       printf("size = %i, top = %i\n", pq->size, (void*)pq->heapArray[0].data );
                                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5231961
